--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
             <button class="bg-orange-500 rounded-full px-4 py-2 hover:bg-slate-500">Go</button>
            </div> 
         </form>
-        <div class="hidden md:block">Copyright © 2023, All Rights Reserved</div>
+        <div class="hidden md:block">Designed and developed by Youness Bachar Khir © 2024</div>
        </div>
     </div>
    </footer>
