--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
     <div class="container mx-auto flex flex-col-reverse md:flex-row md:justify-between text-white px-5 py-10 space-y-8 md:space-y-0">
        <div class="flex flex-col items-center justify-between space-y-12 md:space-y-2 md:items-start ">
         <div class="text-center mt-6 md:mt-0">
-            Copyright © 2023, All Rights Reserved
+           Designed by Youness Bachar Khir © 2024
         </div>
         <div>
             <img src="dist/img/logo-dark.png" alt="logo-dark" class="h-8">
@@ -116,7 +116,7 @@
             <button class="bg-orange-500 rounded-full px-4 py-2 hover:bg-slate-500">Go</button>
            </div> 
         </form>
-        <div class="hidden md:block">Designed and developed by Youness Bachar Khir © 2024</div>
+        <div class="hidden md:block">Designed by Youness Bachar Khir © 2024</div>
        </div>
     </div>
    </footer>
